--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ endif ()
 
 include_directories(${INCLUDE_DIR})
 add_compile_options("-Wall"
+        "-Wall"
         "-Wextra"
         "-Wpedantic"
         "-Wshadow"
@@ -56,38 +57,42 @@ add_compile_options("-Wall"
         "-Wformat=2"
         "-Wfree-nonheap-object"
         "-Wshift-overflow"
-        "-Wwrite-strings")
+        "-Wwrite-strings"
+#        "-Wunsuffixed-float-constants"
+#        "-Warith-conversion"
+#        "-Wunsafe-loop-optimizations"
+#        "-Wvector-operation-performance"
+#        "-Walloc-zero"
+#        "-Wtrampolines"
+#        "-Wtsan"
+#        "-Wformat-overflow=2"
+#        "-Wformat-signedness"
+#        "-Wjump-misses-init"
+#        "-Wformat-truncation=2"
+        )
 
 if (${SANITIZE})
+    list(APPEND COMPILER_FLAGS
+            "-fsanitize=pointer-compare"
+            "-fsanitize=pointer-subtract"
+            "-fsanitize=undefined"
+            "-fsanitize-address-use-after-scope"
+            "-fcf-protection=full"
+            ##            "-fharden-compares"
+            ##            "-fharden-conditional-branches"
+            "-fharden-control-flow-redundancy"
+            "-fstack-protector=all"
+            ##            "-fstack-check"
+            ##            "-fstack-clash-protection"
+            "-finstrument-functions"
+            "-fsanitize=leak"
+            "-fno-delete-null-pointer-checks"
+            "-fno-omit-frame-pointer"
+            )
+
     add_compile_options("-fsanitize=address")
-    add_compile_options("-fsanitize=undefined")
-    add_compile_options("-fsanitize-address-use-after-scope")
-    add_compile_options("-fstack-protector-all")
-    add_compile_options("-fdelete-null-pointer-checks")
-    add_compile_options("-fno-omit-frame-pointer")
-
-    if (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-        add_compile_options("-fsanitize=leak")
-    endif ()
-
     add_link_options("-fsanitize=address")
     add_link_options("-fsanitize=bounds")
-endif ()
-
-if ("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
-    #    add_compile_options("-O2")
-    add_compile_options("-Wunsuffixed-float-constants"
-            "-Warith-conversion"
-            "-Wunsafe-loop-optimizations"
-            "-Wvector-operation-performance"
-            "-Walloc-zero"
-            "-Wtrampolines"
-            "-Wtsan"
-            "-Wformat-overflow=2"
-            "-Wformat-signedness"
-            "-Wjump-misses-init"
-            "-Wformat-truncation=2")
-elseif ("${CMAKE_C_COMPILER_ID}" STREQUAL "Clang")
 endif ()
 
 find_package(Doxygen
@@ -117,18 +122,22 @@ set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-altera-unroll-loops")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-android-cloexec-accept")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-android-cloexec-dup")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-android-cloexec-open")
+set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-android-cloexec-pipe")
+set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-android-cloexec-socket")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-bugprone-easily-swappable-parameters")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-cert-dcl03-c")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-clang-analyzer-deadcode.DeadStores")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-clang-analyzer-security.insecureAPI.DeprecatedOrUnsafeBufferHandling")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-clang-analyzer-security.insecureAPI.strcpy")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-clang-diagnostic-cast-align")
+set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-clang-diagnostic-format-nonliteral")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-clang-diagnostic-incompatible-pointer-types-discards-qualifiers")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-clang-diagnostic-unknown-warning-option")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-clang-diagnostic-unused-but-set-variable")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-clang-diagnostic-unused-function")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-clang-diagnostic-unused-parameter")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-clang-diagnostic-unused-variable")
+set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-clang-diagnostic-vla")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-cppcoreguidelines-init-variables")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-google-readability-todo")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-hicpp-static-assert")
@@ -136,7 +145,21 @@ set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-llvmlibc-restrict-system-libc-heade
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-misc-static-assert")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-misc-unused-parameters")
 set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-readability-identifier-length")
-set(CMAKE_C_CLANG_TIDY clang-tidy -checks=${CLANG_TIDY_CHECKS};--quiet)
+set(CLANG_TIDY_CHECKS "${CLANG_TIDY_CHECKS},-modernize-macro-to-enum")
+
+if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    if (NOT DEFINED ENV{CMDLINE_TOOLS_VER})
+        message( FATAL_ERROR "The CMDLINE_TOOLS_VER environment variable must be set" )
+    endif ()
+
+    if(NOT EXISTS /Library/Developer/CommandLineTools/usr/lib/clang/$ENV{CMDLINE_TOOLS_VER})
+        message( FATAL_ERROR "/Library/Developer/CommandLineTools/usr/lib/clang/$ENV{CMDLINE_TOOLS_VER} does not exist" )
+    endif ()
+
+#    set(CMAKE_C_CLANG_TIDY clang-tidy -extra-arg=-I/Library/Developer/CommandLineTools/usr/lib/clang/$ENV{CMDLINE_TOOLS_VER}/include -checks=${CLANG_TIDY_CHECKS};--quiet)
+else ()
+    set(CMAKE_C_CLANG_TIDY clang-tidy -checks=${CLANG_TIDY_CHECKS};--quiet)
+endif ()
 
 add_executable(${PROJECT_NAME} ${SOURCE_LIST} ${HEADER_LIST})
 target_include_directories(${PROJECT_NAME} PRIVATE include)
@@ -155,3 +178,6 @@ set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}")
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
 
 add_dependencies(${PROJECT_NAME} doxygen)
+
+#find_library(LIBCGREEN cgreen REQUIRED)
+#add_subdirectory(tests)
