--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -27,25 +27,25 @@ else ()
 endif ()
 
 find_library(LIBCGREEN cgreen REQUIRED)
-find_library(LIBDC_ERROR dc_error REQUIRED)
-find_library(LIBDC_ENV dc_env REQUIRED)
-find_library(LIBDC_C dc_c REQUIRED)
-find_library(LIBDC_POSIX dc_posix REQUIRED)
-find_library(LIBDC_UNIX dc_unix REQUIRED)
-find_library(LIBDC_UTIL dc_util REQUIRED)
-find_library(LIBDC_FSM dc_fsm REQUIRED)
-find_library(LIB_CONFIG config REQUIRED)
-find_library(LIBDC_APPLICATION dc_application REQUIRED)
+#find_library(LIBDC_ERROR dc_error REQUIRED)
+#find_library(LIBDC_ENV dc_env REQUIRED)
+#find_library(LIBDC_C dc_c REQUIRED)
+#find_library(LIBDC_POSIX dc_posix REQUIRED)
+#find_library(LIBDC_UNIX dc_unix REQUIRED)
+#find_library(LIBDC_UTIL dc_util REQUIRED)
+#find_library(LIBDC_FSM dc_fsm REQUIRED)
+#find_library(LIB_CONFIG config REQUIRED)
+#find_library(LIBDC_APPLICATION dc_application REQUIRED)
 
 target_link_libraries(sh_shell_test PRIVATE ${LIBCGREEN})
-target_link_libraries(sh_shell_test PUBLIC ${LIBDC_ERROR})
-target_link_libraries(sh_shell_test PUBLIC ${LIBDC_ENV})
-target_link_libraries(sh_shell_test PUBLIC ${LIBDC_C})
-target_link_libraries(sh_shell_test PUBLIC ${LIBDC_POSIX})
-target_link_libraries(sh_shell_test PUBLIC ${LIBDC_UNIX})
-target_link_libraries(sh_shell_test PUBLIC ${LIBDC_UTIL})
-target_link_libraries(sh_shell_test PUBLIC ${LIBDC_FSM})
-target_link_libraries(sh_shell_test PUBLIC ${LIB_CONFIG})
-target_link_libraries(sh_shell_test PUBLIC ${LIBDC_APPLICATION})
+#target_link_libraries(sh_shell_test PUBLIC ${LIBDC_ERROR})
+#target_link_libraries(sh_shell_test PUBLIC ${LIBDC_ENV})
+#target_link_libraries(sh_shell_test PUBLIC ${LIBDC_C})
+#target_link_libraries(sh_shell_test PUBLIC ${LIBDC_POSIX})
+#target_link_libraries(sh_shell_test PUBLIC ${LIBDC_UNIX})
+#target_link_libraries(sh_shell_test PUBLIC ${LIBDC_UTIL})
+#target_link_libraries(sh_shell_test PUBLIC ${LIBDC_FSM})
+#target_link_libraries(sh_shell_test PUBLIC ${LIB_CONFIG})
+#target_link_libraries(sh_shell_test PUBLIC ${LIBDC_APPLICATION})
 
 add_test(NAME sh_shell_test COMMAND sh_shell_test)
